klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/projection/ProjectionOnAmbiguousReferencePropertyTest.klass
package dummy

class Parent
{
    key: String key;
}

class Child
{
    key: String key;
    parentKey: String private;
}

association ParentHasChild1
{
    parent: Parent[0..1];
    children: Child[0..*];

    relationship this.key == Child.parentKey
}

association ParentHasChild2
{
    parent2: Parent[0..1];
    children: Child[0..*];

    relationship this.key == Child.parentKey
}

projection ParentProject on Parent
{
    children:
    {
        key: "key",
    },
}
